fix(frontend): Final touches
1. Moved all the organisation-menu stuff outinto a separate directory.
2. Added flex-shrink to stop panelbeing squashed.
2. Added click event to logo/title container and updated tests to include title.

--- a/client/src/admin/organisation-menu/organisation-menu.module.css
+++ b/client/src/admin/organisation-menu/organisation-menu.module.css
@@ -8,6 +8,7 @@
 .organisationMenu {
   width: 18.625rem;
   margin-top: 4.375rem;
+  flex-shrink: 0;
 }
 
 .organisationInfo {
